--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body {
     align-items: center;
     justify-content: center;
     position: relative;
-    flex-direction: column;
+    flex-direction: row;
+    gap: 40px;
 }
 
 body::before {
@@ -51,10 +52,35 @@ body::before {
     flex-direction: column;
 }
 
+.main-container2{
+    gap:15px;
+    justify-content: center;
+    align-items: center;
+    padding: 70px 20px;
+}
+
 /* INPUT CONTAINER */
 .input-container {
     position: relative;
     margin-bottom: 25px;
+}
+
+.button{
+    width: 100%;
+    padding: 5px 5px;
+    border-radius: 99px;
+    border: 3px solid transparent;
+    background: rgb(0, 0, 0, 0.15);
+    outline: none;
+    font-weight: 500;
+    transition: 0.25s border;
+    text-align: center;
+}
+
+.button:hover{
+    background: rgb(0, 0, 0, 0.25);
+    cursor: pointer;
+    transition: all 0.3s ease ;
 }
 
 .city-input {
@@ -261,14 +287,11 @@ body::before {
         animation: none;
         text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
     }
-
+    
     .app-title br {
         display: none;
     }
-
-    .main-container {
-        margin-top: 60px;
-    }
+    
 }
 
 .app-credit {
@@ -312,4 +335,14 @@ body::before {
 
 .suggestion-list li:hover {
     background-color: rgba(255, 255, 255, 0.1);
+}
+
+@media (max-width: 673px) {
+    body{
+        flex-direction: column !important; 
+        gap: 10px;
+    }
+    .main-container2{
+        display: none;
+    }
 }
